force-app/main/default/objects/Maintenance__c/fields/Maintenance_Check__c.field-meta.xml
<CustomField>
    <fullName>Maintenance_Check__c</fullName>
    <label>Maintenance Check</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Maintenance_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Seat Belts</fullName>
            </value>
            <value>
                <fullName>Seats</fullName>
            </value>
            <value>
                <fullName>Doors</fullName>
            </value>
            <value>
                <fullName>Windows</fullName>
            </value>
            <value>
                <fullName>Mirrors</fullName>
            </value>
            <value>
                <fullName>Heating and Cooling</fullName>
            </value>
            <value>
                <fullName>Emergency Kit and Fire Extinguisher</fullName>
            </value>
            <value>
                <fullName>Fluids and Oil</fullName>
            </value>
            <value>
                <fullName>Tires</fullName>
            </value>
            <value>
                <fullName>Lights</fullName>
            </value>
            <value>
                <fullName>Brakes</fullName>
            </value>
            <value>
                <fullName>Drive Belts</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>