force-app/main/default/objects/Maintenance__c/fields/Maintenance_ID__c.field-meta.xml
<CustomField>
    <fullName>Maintenance_ID__c</fullName>
    <displayFormat>M-{00000}</displayFormat>
    <label>Maintenance ID</label>
    <type>AutoNumber</type>
</CustomField>