force-app/main/default/objects/Maintenance__c/fields/Maintenance_Type__c.field-meta.xml
<CustomField>
    <fullName>Maintenance_Type__c</fullName>
    <label>Maintenance Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Interior</fullName>
            </value>
            <value>
                <fullName>Exterior</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>